--- a/acrofestival/templates/pages/winteracro/basefest.html
+++ b/acrofestival/templates/pages/winteracro/basefest.html
@@ -20,7 +20,7 @@
     <body>
             {% analytical_body_top %}
             {% block content %}{% endblock content %}
-            {% include 'pages/winteracro/snippets/jsfest.html' %}
+            {% include "pages/winteracro/snippets/jsfest.html" %}
             {% analytical_body_bottom %}
     </body>
 </html>
