--- a/acrofestival/templates/pages/winteracro/index.html
+++ b/acrofestival/templates/pages/winteracro/index.html
@@ -162,35 +162,26 @@
                     </p>
                     <div class="box alt">
                         <div class="row gtr-uniform">
-                            <p><h2>Alfonso & Alberto</h2></p>
+                            <p><h2>Tom & Ayla</h2></p>
                             <p>
                             <span class="image left">
-                                    <img src="{% static "winteracro/images/teachers2019/alfonsoandalberto.jpg"%}" alt="Acrowings
-                                    in the Winter Acro Fest 2019 for the Second time teaching
-                                    Acrobatics Icarians and more">
+                                    <img src="{% static "winteracro/images/teachers2019/tomundayla.jpg"%}" alt="Tom and Ayla at the Winter Acro 2021">
                             </span>
-                            If this two are around you already know it's going to be a blast! Full of humor, Alfonso and Alberto just kill it at <u>Icarians and head balances</u>. Very to happy they can come again this year!
+                            You prooooobably already know them and if you don't you should! Excelente acrobats with a quite particular style and sens of humor glad to have you guys on board!
                             </p>
                             <p><h2>Jen & Pri</h2></p>
                             <p>
                             <span class="image left">
                                     <img src="{% static "winteracro/images/teachers2019/priandjane.jpg"%}" alt="Jane and Pri comming to the Winter Acro Festival 2020">
                             </span>
-                            There's probably a handfull of people who invest more time developing <u>whips in a wide range of variations</u>. We're super happy tocount with them for this version of the Winter Acro.
+                            There's probably only a handfull of people who invest more time developing <u>whips in a wide range of variations</u>. We're super happy to count with them for this new version the Winter Acro.
                             </p>
-                            <p><h2>Celine & Baptiste</h2></p>
+                            <p><h2>Kat and Jared</h2></p>
                             <p>
                             <span class="image left">
-                                    <img src="{% static "winteracro/images/teachers2019/baptisteceline.jpg"%}" alt="Baptiste raffael and Celine at the Winter Acro 2020">
+                                    <img src="{% static "winteracro/images/teachers2019/katandjared.jpg"%}" alt="Kat and Jared at the Winter Acro 2020 doing some dance acro">
                             </span>
-                            Baptiste and Celine have been at the Winter Acro a few times. Remember all those <u>one arm handstand workshops? or the super whips?</u>. Legend says they found love at the Winter Acro... but thats a story for another time. Very happy to have them on board sharing all the super cool tricks.<u>Technical, fun and creative</u> what more could you ask for?
-                            </p>
-                            <p><h2>Eulalie</h2></p>
-                            <p>
-                            <span class="image left">
-                                    <img src="{% static "winteracro/images/teachers2019/eulalie.jpg"%}" alt="Eulalie showing all her trampolin skills at the Winter Acro 2020">
-                            </span>
-                            When jumping, flipping and turning is required on the <u>trampolin</u> Eulelie is the first on the line. For the first time in the Winter Acro she comes to share her passion. Thanks for being with us!
+                            Many conventions have been shared but finally we hope to have them at the Winter Acro 2020. Amazing show this two have! And we love their workshops too: Technical, clean, elegant!!
                             </p>
                             <p><h2>Bruno</h2></p>
                             <p>
@@ -199,57 +190,6 @@
                             </span>
                             I had to laugh only from remembering Bruno! <u>Improvisation and staging</u> are he's strengths and passion. But it's hard to find the words to describe such a clown, you just have to meet him. Happy to have you with us my friend!
                             </p>
-                            <p><h2>Trudi & Wybren</h2></p>
-                            <p>
-                            <span class="image left">
-                                    <img src="{% static "winteracro/images/teachers2019/wybremandtrudi.jpg"%}" alt="Wybrem and Trudi
-                                    in the Winter Acro Fest 2019 - Skining Codarts and more">
-                            </span>
-                            It's endless what you could learn from this couple of amazing acrobats!<br>
-                            Wybren is teacher at the Codarts Circus School in Rotterdam and with Trudi they have
-                            given many of our favourite workshops. Very happy to have them on board!
-                            </p>
-                            <p><h2>Peter</h2></p>
-                            <p>
-                            <span class="image left">
-                                    <img src="{% static "winteracro/images/teachers2019/peter.jpg"%}" alt="Peter and Julie
-                                    in the Winter Acro Fest 2019 for the Second time teaching
-                                    Acrobatics Icarians and more">
-                            </span>
-                            We where on our way to give a workshop in Copenhagen and while stalking the local
-                            teachers we came across some pretty nice flows. Later that day we finally met
-                            the authors: Peter and Julie. So lovely and beautiful people!! and what a multi poli
-                            hiper mover Peter is. Very happy he accepted our invitation!
-                            </p>
-                            <p><h2>Duo Kaleidos</h2></p>
-                            <p>
-                            <span class="image left">
-                                    <img src="{% static "winteracro/images/teachers2019/kaleidos.jpg"%}" alt="duo kaleidos at the 3th version of the winter acro 2020 in lenk">
-                            </span>
-                            Many conventions have been shared but finally we hope to have them at the Winter Acro 2020. Amazing show this two have! And we love their workshops too: Technical, clean, elegant!!
-                            </p>
-                            <!-- <p><h2>Analogue Acrobatics</h2></p> -->
-                            <!-- <p> -->
-                            <!-- <span class="image right"> -->
-                            <!--     <img src="{% static "winteracro/images/teachers2019/benandelli.jpg"%}" alt="duo kaleidos at the 3th version of the winter acro 2020 in lenk"> -->
-                            <!-- </span> -->
-                            <!-- We just love this two! Last year they couldn't make it cause they where on tour with Cirkör, hope we have the pleasure this year. -->
-                            <!-- </p> -->
-                            <!-- <p><h2>Fer & Fifi</h2></p> -->
-                            <!-- <p>-->
-                            <!-- <span class="image right">-->
-                            <!--         <img src="{% static "winteracro/images/teachers2019/feryfifi.jpg"%}" alt="Fer and Fifi-->
-                            <!--         in the Winter Acro Fest 2019 for the Second time teaching-->
-                            <!--         Acrobatics Icarians and more">-->
-                            <!-- </span>-->
-                            <!-- We met this duo just recently at the 7th Barcelona Mano a Mano Convention and liked-->
-                            <!-- their way of teaching so much that we had to invite them.<br>-->
-                            <!-- Experts in acrobatics and many other Circus arts, they are going to share a piece-->
-                            <!-- of their knowledge with us! Thanks for accepting our invitation and happy to see you soon !-->
-                            <!-- </p>-->
-                            <!-- <p><h2>Paul</h2></p>-->
-                            <!-- <p>-->
-                            <!-- <span class="image left">-->
                         </div>
                 </div>
             </section>
@@ -345,12 +285,6 @@
                     </li>
                     {% endfor %}
                     </ul>
-                    <1!--
-                <footer class="major">
-                    <ul class="actions">
-                        <li><a href="generic.html" class="button">Learn Mo</a></li>
-                    </ul>
-                </footer>--1>
             </section>
             <section id="donation" class="main">
                 <div class="spotlight">
