--- a/acrofestival/templates/pages/winteracro/location.html
+++ b/acrofestival/templates/pages/winteracro/location.html
@@ -77,6 +77,6 @@
             </footer>
         </section>
     </div>
-    {% include 'snippets/footer.html' %}
+    {% include "pages/winteracro/snippets/footer.html" %}
 </div>
 {% endblock %}
