--- a/acrofestival/templates/pages/winteracro/pictures.html
+++ b/acrofestival/templates/pages/winteracro/pictures.html
@@ -6,7 +6,7 @@
         <header id="header">
             <h1>Winter Acro Pictures 2020</h1>
         </header>
-            {% include 'pages/winteracro/snippets/navnothome.html' %}
+            {% include "pages/winteracro/snippets/navnothome.html" %}
         <!-- Main -->
         <div id="main">
             <!-- Content -->
@@ -24,6 +24,6 @@
                 <p>If you have other links or pictures to share look for Adrian in the convention!</p>
             </section>
     </div>
-    {% include 'pages/winteracro/snippets/footer.html' %}
+    {% include "pages/winteracro/snippets/footer.html" %}
     </div>
 {% endblock %}
