--- a/acrofestival/templates/pages/winteracro/prices.html
+++ b/acrofestival/templates/pages/winteracro/prices.html
@@ -7,7 +7,7 @@
             <h1>Prices & Conditions</h1>
             <p></p>
         </header>
-            {% include 'pages/winteracro/snippets/navnothome.html' %}
+            {% include "pages/winteracro/snippets/navnothome.html" %}
         <!-- Main -->
         <div id="main">
             <!-- Content -->
@@ -32,6 +32,6 @@
                 <p>{% tinycontent_simple 'winter_prices_refunds' %}</p>
             </section>
     </div>
-    {% include 'snippets/footer.html' %}
+    {% include "pages/winteracro/snippets/footer.html" %}
     </div>
 {% endblock %}
