Form and Location link fix

--- a/acrofestival/templates/pages/winteracro/prices.html
+++ b/acrofestival/templates/pages/winteracro/prices.html
@@ -24,9 +24,8 @@
                     <li>{% tinycontent_simple 'winter_prices_upgrade2' %}</li>
                 </ul>
                 <h3>Payment methods</h3>
-                <p> We will send you the bank details after you send us your registration
-                <a href="{% url "winterform" %}">FORM</a> by email.</br>
-                If another payment method is needed for any special reason please ask us directly.</br>
+                <p> We will send you the bank details by email after we confirm and process your registration.</br>
+                If another payment method is needed please ask us directly.</br>
                 *Note that there might be a fee included.</p>
                 <h2>Refund conditions</h2>
                 <p>{% tinycontent_simple 'winter_prices_refunds' %}</p>
