--- a/acrofestival/templates/pages/winteracro/location.html
+++ b/acrofestival/templates/pages/winteracro/location.html
@@ -7,7 +7,7 @@
         <h1>Lenk im Simmental</h1>
         <p>How to get there and where will we sleep</p>
     </header>
-    {% include 'pages/wintercro/snippets/navnothome.html' %}
+    {% include "pages/winteracro/snippets/navnothome.html" %}
     <!-- Main -->
     <div id="main">
         <!-- Content -->
