--- a/acrofestival/templates/pages/winteracro/snippets/navnothome.html
+++ b/acrofestival/templates/pages/winteracro/snippets/navnothome.html
@@ -6,6 +6,6 @@
               <li><a href="{% url 'winterprices' %}">Pricing</a></li>
               <li><a href="{% url 'winteracro' %}#teachers">Teachers</a></li>
               <!-- <li><a href="{% url 'winteracro' %}#pics">Pictures</a></li> -->
-              <li><a style="background:#f3d216;" href="{% url 'winterform'%}">Register</a></li>
+              <li><a  target="_blank" rel="noopener" style="background:#f3d216;" href="https://acrolama.com/events/winter-acro-festival-2021/">Register</a></li>
             </ul>
           </nav>
