--- a/acrofestival/static/dap/css/owl.carousel.css
+++ b/acrofestival/static/dap/css/owl.carousel.css
@@ -55,7 +55,7 @@
 
 /* mouse grab icon */
 .grabbing { 
-    cursor:url(grabbing.png) 8 8, move;
+    cursor:url(../assets/transparent.jpg) 8 8, move;
 }
 
 /* fix */
