--- a/acrofestival/static/dap/css/revolution.css
+++ b/acrofestival/static/dap/css/revolution.css
@@ -2344,8 +2344,7 @@ zoom: 1;
   src: url('../fonts/revicons.eot?5510888');
   src: url('../fonts/revicons.eot?5510888#iefix') format('embedded-opentype'),
        url('../fonts/revicons.woff?5510888') format('woff'),
-       url('../fonts/revicons.ttf?5510888') format('truetype'),
-       url('../fonts/revicons.svg?5510888#revicons') format('svg');
+       url('../fonts/revicons.ttf?5510888') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
