Revicons url fix

--- a/acrofestival/static/dap/css/revolution.css
+++ b/acrofestival/static/dap/css/revolution.css
@@ -2354,7 +2354,7 @@ zoom: 1;
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'revicons';
-    src: url('../font/revicons.svg?5510888#revicons') format('svg');
+    src: url('../fonts/revicons.svg?5510888#revicons') format('svg');
   }
 }
 */
