--- a/acrofestival/templates/pages/dap/index.html
+++ b/acrofestival/templates/pages/dap/index.html
@@ -472,13 +472,16 @@
                     <div class="col-lg-12">
 
                         <h2 class="uppercase">PROGRAM</h2>
-                        <p class="lead">During the whole Prorgram a 50% of the Workshops are for the "Main Topic" and 25% for each of the two other Topics. There is a constant progression and work on ALL the Topics, with a main focus on a particular one.</p>
+                        <p class="lead">During the whole Prorgram a <strong>50% of the Workshops are for the "Main Topic" and 25% for each of the two other Topics</strong>. There is a constant progression and work on ALL the Topics, with a main focus on a particular one.</p>
+                        <p class="lead">Week 1: 1-7 of September</br>
+                            Week 2: 8-14 of September</br>
+                            Week 3: 15-21 of September</p>
 
                         <!-- SCHEDULE TAB -->
                         <ul id="myTab" class="nav nav-tabs" role="tablist">
-                            <li role="presentation" class="active"><a href="#day1" id="day1-tab" role="tab" data-toggle="tab" aria-controls="day1" aria-expanded="true">Week 1 (1-7 September)</a></li>
-                            <li role="presentation" class=""><a href="#day2" role="tab" id="day2-tab" data-toggle="tab" aria-controls="day2" aria-expanded="false">Week 2 (8-14 September)</a></li>
-                            <li role="presentation" class=""><a href="#day3" role="tab" id="day3-tab" data-toggle="tab" aria-controls="day3" aria-expanded="false">Week 3 (15-21 September)</a></li>
+                            <li role="presentation" class="active"><a href="#day1" id="day1-tab" role="tab" data-toggle="tab" aria-controls="day1" aria-expanded="true">Week 1</a></li>
+                            <li role="presentation" class=""><a href="#day2" role="tab" id="day2-tab" data-toggle="tab" aria-controls="day2" aria-expanded="false">Week 2</a></li>
+                            <li role="presentation" class=""><a href="#day3" role="tab" id="day3-tab" data-toggle="tab" aria-controls="day3" aria-expanded="false">Week 3</a></li>
                         </ul>
 
                         <!-- CONTENT -->
@@ -1381,13 +1384,14 @@
                             <h2 class="hidden">Venue</h2>
                             <div id="testimonial-carousel">
                                 <div class="item">
-                                    <p class="lead">Sunparks Kempense Meren is a big resort located in the middle of a vast belgium forest and lakes of the 'Stille Kempen'.</p>
+                                    <p class="lead">After a long day of training, you'll be able to rest in your own bed in an 8-person house, split into 4 double rooms. The houses also have living rooms, bathrooms, and fully equipped kitchens so you will have plenty of space to cook and eat with whoever you'd like. 
+</p>
                                 </div>
                                 <div class="item">
-                                    <p class="lead">Besides a lot of acro you will find here comfort, nature and plenty of facilities that will make the experience fully pleasant and enriching. In the middle of a forest and green spaces this venue provides accommodation of 3 stars, big training spaces indoors and outdoors, an immense swimming pool, a lake with beaches. Everything few minutes walking distance from each other.</p>
+                                    <p class="lead">Sunparks Kempense Meren is a large resort located in the middle of a vast Belgian forest near the Stille Kempen lakes. This venue provides 3-star accomodation, large training spaces (indoor and outdoor), a huge swimming pool, and a lake with beaches. Each attraction is just a short walk away from the next.</p>
                                 </div>
                                 <div class="item">
-                                    <p class="lead">You will also have the best rest possible after the hard training in your own bed in houses with 8 spots divided in 4 rooms. The houses also have fully equipped kitchens, bathrooms and living rooms so you well have plenty of space for cooking and eating with whoever you want.
+                                    <p class="lead">The venue is located a few minutes away from Mol train station and several supermarkets. It is a short trip by car or train from most of the cities in Belgium and the Netherlands and it’s close to several important airports.
 </p>
                                 </div>
                             </div>
@@ -1407,7 +1411,7 @@
 
                         	<div class="col-lg-8 col-md-8 col-sm-8">
                             	<h2 class="uppercase">venue</h2>
-                                <p class="lead">Donec finibus porta ultricies.<br>Interdum et malesuada fames ac ante ipsum primis in faucibus. </p>
+                              <p class="lead">Sunparks Kempense Meren is a large resort located in the middle of a vast Belgian forest near the Stille Kempen lakes. This venue provides 3-star accomodation, large training spaces (indoor and outdoor), a huge swimming pool, and a lake with beaches. Each attraction is just a short walk away from the next.</p>
                         		<h4>Village Sunparks Kempense Meren</h4>
                                 <img class="img-responsive" src="{% static "dap/img/hotel-logo.png" %}" alt="hotel">
                             </div>
@@ -1415,11 +1419,12 @@
                             <div class="col-lg-4 col-md-4 col-sm-4">
                             	<i class="pe-4x pe-7s-map-2"></i>
                                 <h4 class="uppercase">address</h4>
-                                <p>49 West 32nd Street, New York, NY 10001<br>
-                                	1 212 736-3800<br>
+                                <p>Postelsesteenweg 100</br>
+                                   2400 Mol</br>
+                                   Belgium</br>
                                 	4.9 mi /  7.9 km from Downtown</p>
 
-                                <a class="button button-xsmall button-line-light" href="">more information</a>
+                                <a class="button button-xsmall button-line-light" href="https://goo.gl/maps/ZHsEV7EuysWtwZ4E8">more information</a>
                             </div>
 
                         </div>
