--- a/acrofestival/templates/pages/dap/index.html
+++ b/acrofestival/templates/pages/dap/index.html
@@ -66,7 +66,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a href="index.html"><img src="{% static "dap/img/logo.png" %}" alt="logo"></a>
+              <a href="index.html"><img src="{% static "dap/img/logo.gif" %}" alt="Dynamic Acro Program in Belgium"></a>
             </div>
 
             <div class="collapse navbar-collapse" id="nav">
@@ -90,9 +90,9 @@
             <div class="tp-banner">
 				<ul>
                 	<!-- SLIDE 1 -->
-                  <li data-transition="slidevertical" data-slotamount="1" data-masterspeed="1000" data-thumb="{% static "dap/img/slide_thumb_1.jpg" %}"  data-saveperformance="off"  data-title="Slide">
+                  <li data-transition="slidevertical" data-slotamount="1" data-masterspeed="1000" data-thumb="{% static "dap/img/slide1_header_dap_acrolama_thumb.jpg" %}"  data-saveperformance="off"  data-title="Slide">
                         <!-- MAIN IMAGE -->
-                        <img src="{% static "dap/img/slide1.jpg" %}"  alt="fullslide1"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
+                        <img src="{% static "dap/img/slide1_header_dap_acrolama.jpg" %}"  alt="Header Dynamic Acro Program Alfonso PriJenn Acrolama"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
                         <!-- LAYERS -->
 
                         <!-- LAYER NR. 1 -->
@@ -149,7 +149,7 @@
                             data-endelementdelay="0.1"
                             data-endspeed="500"
                             data-endeasing="Power4.easeIn"
-                            style="z-index: 2; max-width: auto; max-height: auto; white-space: nowrap;">ICARIAN, STANDING AND WHIPS
+                            style="z-index: 2; max-width: auto; max-height: auto; white-space: nowrap;">ICARIAN</br>  STANDING</br>     AND WHIPS
                         </div>
 
                         <!-- LAYER NR. 2 -->
