Added Icons and Profile Pics

--- a/acrofestival/templates/pages/dap/index.html
+++ b/acrofestival/templates/pages/dap/index.html
@@ -356,7 +356,7 @@
                         <li class="col-lg-4 col-md-4 col-sm-4">
                             <div class="speaker">
                                 <figure class="effect-ming">
-                                    <img class="img-responsive" src="{% static "dap/img/speaker1.png" %}" alt=""/>
+                                    <img class="img-responsive" src="{% static "dap/img/speaker1.jpg" %}" alt=""/>
                                     <figcaption>
                                         <span><a class="html-popup" href="speaker-detail.html"><img class="img-responsive" src="{% static "dap/img/plus.png" %}" alt=""></a></span>
                                     </figcaption>
@@ -373,7 +373,7 @@
                         <li class="col-lg-4 col-md-4 col-sm-4">
                             <div class="speaker">
                                 <figure class="effect-ming">
-                                    <img class="img-responsive" src="{% static "dap/img/speaker2.png" %}" alt=""/>
+                                    <img class="img-responsive" src="{% static "dap/img/speaker2.jpg" %}" alt=""/>
                                     <figcaption>
                                         <span><a class="html-popup" href="speaker-detail.html"><img class="img-responsive" src="{% static "dap/img/plus.png" %}" alt=""></a></span>
                                     </figcaption>
@@ -390,7 +390,7 @@
                         <li class="col-lg-4 col-md-4 col-sm-4">
                             <div class="speaker">
                                 <figure class="effect-ming">
-                                    <img class="img-responsive" src="{% static "dap/img/speaker3.png" %}" alt=""/>
+                                    <img class="img-responsive" src="{% static "dap/img/speaker3.jpg" %}" alt=""/>
                                     <figcaption>
                                         <span><a class="html-popup" href="speaker-detail.html"><img class="img-responsive" src="{% static "dap/img/plus.png" %}" alt=""></a></span>
                                     </figcaption>
@@ -407,7 +407,7 @@
                         <li class="col-lg-4 col-md-4 col-sm-4">
                             <div class="speaker">
                                 <figure class="effect-ming">
-                                    <img class="img-responsive" src="{% static "dap/img/speaker4.png" %}" alt=""/>
+                                    <img class="img-responsive" src="{% static "dap/img/speaker4.jpg" %}" alt=""/>
                                     <figcaption>
                                         <span><a class="html-popup" href="speaker-detail.html"><img class="img-responsive" src="{% static "dap/img/plus.png" %}" alt=""></a></span>
                                     </figcaption>
@@ -424,7 +424,7 @@
                         <li class="col-lg-4 col-md-4 col-sm-4">
                             <div class="speaker">
                                 <figure class="effect-ming">
-                                    <img class="img-responsive" src="{% static "dap/img/speaker5.png" %}" alt=""/>
+                                    <img class="img-responsive" src="{% static "dap/img/speaker5.jpg" %}" alt=""/>
                                     <figcaption>
                                         <span><a class="html-popup" href="speaker-detail.html"><img class="img-responsive" src="{% static "dap/img/plus.png" %}" alt=""></a></span>
                                     </figcaption>
@@ -441,7 +441,7 @@
                         <li class="col-lg-4 col-md-4 col-sm-4">
                             <div class="speaker">
                                 <figure class="effect-ming">
-                                    <img class="img-responsive" src="{% static "dap/img/speaker6.png" %}" alt=""/>
+                                    <img class="img-responsive" src="{% static "dap/img/speaker6.jpg" %}" alt=""/>
                                     <figcaption>
                                         <span><a class="html-popup" href="speaker-detail.html"><img class="img-responsive" src="{% static "dap/img/plus.png" %}" alt=""></a></span>
                                     </figcaption>
