--- a/acrofestival/templates/pages/dap/index.html
+++ b/acrofestival/templates/pages/dap/index.html
@@ -15,6 +15,12 @@
         <!-- viewport settings -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
+        <meta property="og:url"                content="https://acrofestival.ch" />
+        <meta property="og:type"               content="article" />
+        <meta property="og:title"              content="Dynamic Acro Programm" />
+        <meta property="og:description"        content="21 Days - Intesive Acro and Acroyoga programm collecting the best of Whips, Icarian Games and Standing Acrobatics we know of... From 6 till 26 of September hosted by Acrolama, Pri and Jenn, Alfonso Sabaidee and Bet Sinlao in Belgium." />
+        <meta property="og:image"              content="{% static "dap/img/flyer.jpg" />
+
 
         <!-- CSS -->
         <link rel="stylesheet" href="{% static "dap/css/bootstrap.css" %}">
