--- a/acrofestival/templates/pages/dap/index.html
+++ b/acrofestival/templates/pages/dap/index.html
@@ -19,7 +19,7 @@
         <meta property="og:type"               content="article" />
         <meta property="og:title"              content="Dynamic Acro Programm" />
         <meta property="og:description"        content="21 Days - Intesive Acro and Acroyoga programm collecting the best of Whips, Icarian Games and Standing Acrobatics we know of... From 6 till 26 of September hosted by Acrolama, Pri and Jenn, Alfonso Sabaidee and Bet Sinlao in Belgium." />
-        <meta property="og:image"              content="{% static "dap/img/flyer.jpg" />
+        <meta property="og:image"              content="{% static "dap/img/flyer.jpg" %}" />
 
 
         <!-- CSS -->
@@ -82,9 +82,9 @@
                 <li><a data-toggle="elementscroll" href="#program">Program</a></li>
                 <li><a data-toggle="elementscroll" href="#venue">Venue</a></li>
                 <li><a data-toggle="elementscroll" href="#register">Register</a></li>
-                <li><a data-toggle="elementscroll" href="#gallery">Gallery</a></li>
-                <li><a data-toggle="elementscroll" href="#orga">Organizers</a></li>
-                <li><a data-toggle="elementscroll" href="#footer">Contact</a></li>
+                <!-- <li><a data-toggle="elementscroll" href="#gallery">Gallery</a></li> -->
+                <li><a data-toggle="elementscroll" href="#sponsors">Organizers</a></li>
+                <!-- <li><a data-toggle="elementscroll" href="#footer">Contact</a></li> -->
               </ul>
             </div>
 
@@ -155,7 +155,7 @@
                             data-endelementdelay="0.1"
                             data-endspeed="500"
                             data-endeasing="Power4.easeIn"
-                            style="z-index: 2; max-width: auto; max-height: auto; white-space: nowrap;">ICARIAN</br>  STANDING</br>     AND WHIPS
+                            style="z-index: 2; max-width: auto; max-height: auto; white-space: nowrap;">ICARIAN STANDING AND WHIPS
                         </div>
 
                         <!-- LAYER NR. 2 -->
@@ -1609,7 +1609,7 @@
                         </div>
                     </div>
 					          <div class="col-lg-12 text-center">
-                    	<a class="button button-small button-line-dark html-popup" href="https://acrolama.com/dap">register now</a>
+                    	<a class="button button-small button-line-dark" href="https://acrolama.com/events/dap">register now</a>
                     </div>
 
                 </div>
