--- a/acrofestival/templates/pages/dap/index.html
+++ b/acrofestival/templates/pages/dap/index.html
@@ -1838,7 +1838,7 @@
                     	<h4 class="uppercase">Dynamic Acro Program</h4>
                         <p class="small">Dynamic Acrobatic Programm - Intesive Acro and Acroyoga programm teaching the best of Whips, Icarian Games and Standing Acro in Europe hosted by Acrolama, Pri and Jenn, Alfonso Sabaidee and Bet Sinlao</p>
                         <ul class="list-unstyled list-inline uppercase">
-                            <li><a href="#"><i class="fa fa-lg fa-facebook"></i></a></li>
+                            <li><a href="https://www.facebook.com/events/787785772170229/"><i class="fa fa-lg fa-facebook"></i></a></li>
                             <!-- <li><a href="#"><i class="fa fa-lg fa-instagram"></i></a></li> -->
                         </ul>
                     </div>
