--- a/acrofestival/templates/pages/dap/index.html
+++ b/acrofestival/templates/pages/dap/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 	<head>
 
-        <title>DAP - Dynamic Acro Programm</title>
+        <title>DAP - Dynamic Acro Program</title>
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +17,7 @@
 
         <meta property="og:url"                content="https://acrofestival.ch" />
         <meta property="og:type"               content="article" />
-        <meta property="og:title"              content="Dynamic Acro Programm" />
+        <meta property="og:title"              content="Dynamic Acro Program" />
         <meta property="og:description"        content="21 Days - Intesive Acro and Acroyoga programm collecting the best of Whips, Icarian Games and Standing Acrobatics we know of... From 6 till 26 of September hosted by Acrolama, Pri and Jenn, Alfonso Sabaidee and Bet Sinlao in Belgium." />
         <meta property="og:image"              content="{% static "dap/img/flyer.jpg" %}" />
 
@@ -1836,7 +1836,7 @@
 
                     <div class="col-lg-3 col-md-3 col-sm-6">
                     	<h4 class="uppercase">Dynamic Acro Program</h4>
-                        <p class="small">Dynamic Acrobatic Programm - Intesive Acro and Acroyoga programm teaching the best of Whips, Icarian Games and Standing Acro in Europe hosted by Acrolama, Pri and Jenn, Alfonso Sabaidee and Bet Sinlao</p>
+                        <p class="small">Dynamic Acrobatic Program - Intesive Acro and Acroyoga programm teaching the best of Whips, Icarian Games and Standing Acro in Europe hosted by Acrolama, Pri and Jenn, Alfonso Sabaidee and Bet Sinlao</p>
                         <ul class="list-unstyled list-inline uppercase">
                             <li><a href="https://www.facebook.com/events/787785772170229/"><i class="fa fa-lg fa-facebook"></i></a></li>
                             <!-- <li><a href="#"><i class="fa fa-lg fa-instagram"></i></a></li> -->
