--- a/acrofestival/templates/pages/dap/index.html
+++ b/acrofestival/templates/pages/dap/index.html
@@ -1812,7 +1812,7 @@
                             </div>
 
                             <div class="sponsor">
-                                <img class="img-responsive" src="{% static "dap/img/sponsor2.png" %}" alt="">
+                              <a href="http://prijenacro.com"><img class="img-responsive" src="{% static "dap/img/sponsor2.png" %}" alt=""></a>
                             </div>
 
                             <div class="sponsor">
