--- a/acrofestival/templates/pages/dap/index.html
+++ b/acrofestival/templates/pages/dap/index.html
@@ -437,10 +437,11 @@
                     <div class="col-lg-12">
 
                         <h2 class="uppercase">PROGRAM</h2>
-                        <p class="lead">During the whole Prorgram a <strong>50% of the Workshops are for the "Main Topic" and 25% for each of the two other Topics</strong>. There is a constant progression and work on ALL the Topics, with a main focus on a particular one.</p>
-                        <p class="lead">Week 1: 6-12 of September</br>
-                            Week 2: 13-19 of September</br>
-                            Week 3: 20-26 of September</p>
+                        <p class="lead">During each week of the program 50% of the main Workshops will be dedicated to the "Main Topic" of the week and 25% to each of the two other acro topics.</p>
+                        <p class="lead">Week 1 main focus on Icarian Games: 6-12 of September</br>
+                            Week 2 main focus on Standing Acro: 13-19 of September</br>
+                            Week 3 main focus on Whips/Whips-pops: 20-26 of September</br>
+                        </p>
 
                         <!-- SCHEDULE TAB -->
                         <ul id="myTab" class="nav nav-tabs" role="tablist">
