--- a/acrofestival/templates/pages/dap/index.html
+++ b/acrofestival/templates/pages/dap/index.html
@@ -1407,7 +1407,10 @@
 
                 	<div class="col-lg-12">
                     	<h2 class="uppercase text-center">register</h2>
-                        <p class="lead text-center">Nam pellentesque fringilla faucibus. Aliquam tortor ex, egestas porta eget, pretium at lorem.</p>
+                        <p class="lead text-center">Super Early Bird: Until 10th of May</br>
+                                                                Early Bird: Until 21th June</br>
+                                                                Regular Price: After 21th June</br>
+                        </p>
                     </div>
 
                     <div class="col-lg-12">
