--- a/acrofestival/templates/frontpage.html
+++ b/acrofestival/templates/frontpage.html
@@ -13,7 +13,7 @@
 		<article>
         <a href="{% url 'urbanacro'%}">
             <h1>Urban Acro Festival</h1>
-            <h1 style="font-size:2rem" >21 - 23 Aug. 2020</h1>
+            <h1 style="font-size:2rem" >{% tinycontent_simple 'urban_general_date' %}</h1>
             <a href="{% url 'urbanacro'%}" class="xop-button">Enter</a>
         </a>
 		</article>
