--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -11,7 +11,7 @@
         </ul>
         <div class="heading-block centered-block align-center">
             <div class="container">
-                    <h5 class="heading-alt" style="margin-bottom: 8px;"><span class="fa fa-calendar-o base-clr-txt"></span><span style="background-color: rgba(254, 73, 24, 1)">21 - 23 AUGUST</span> <span class="fa fa-map-marker base-clr-txt" style="margin-left: 14px;"></span><span style="background-color: rgba(254, 73, 24, 1)">Zürich, CH</span></h5>
+                    <h5 class="heading-alt" style="margin-bottom: 8px;"><span class="fa fa-calendar-o base-clr-txt"></span><span style="background-color: rgba(254, 73, 24, 1)">{% tinycontent_simple 'urban_general_date' %}</span><span class="fa fa-map-marker base-clr-txt" style="margin-left: 14px;"></span><span style="background-color: rgba(254, 73, 24, 1)">Zürich, CH</span></h5>
                     <h1 class="extra-heading" >Urban Acro Festival</h1>
                     <h6 class="thin base-font" style="background-color: rgba(254, 73, 24, 1)">What does a dyslexic cow say? <strong>OOoooM</strong>.❤</h6>
                 <div class="btns-container">
@@ -81,7 +81,7 @@
                             <img src="{% static 'urbanacro/images/acrofestival_3rd_edition.jpg' %}" alt="" class="img-responsive" />
                         </div>
                         <div class="col-sm-7 align-left">
-                            <h6>3rd. Urban Acro Festival  - new edition!</h6>
+                            <h6>4th. Urban Acro Festival</h6>
                             <p>This year it is going to be a special edition of the Urban Acro
                                 Festival. We would like to address acrobats and acroyoga lovers, who want to
                                 be part of this small acro gathering after a long time of social
