--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html'%}
 {% block content %}
-{% load static %}
+{% load static %}{% load tinycontent_tags %}
     <div class="preloader-mask">
         <div class="preloader"></div>
     </div>
